--- a/index.html
+++ b/index.html
@@ -17,72 +17,96 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js
     />
   </head>
   <body>
-    <header>
-      <nav>
-        <img src="img/logo.png" alt="" /><a href="">Om mig</a
-        ><a href="">Sport rehab</a><a href="">Kvinnohälsa</a
-        ><a href="">Kontakt</a>
-      </nav>
-    </header>
-    <main>
-      <section class="splide" aria-label="Splide Basic HTML Example">
-        <div class="splide__track">
-          <ul class="splide__list">
-            <li class="splide__slide"><img src="img/portratt.jpg" alt="" /></li>
-            <li class="splide__slide">
-              <img src="img/kvinnohälsa.jpg" alt="" />
-            </li>
-            <li class="splide__slide"><img src="img/portratt.jpg" alt="" /></li>
-            <li class="splide__slide">
-              <img src="img/kvinnohälsa.jpg" alt="" />
-            </li>
-            <li class="splide__slide"><img src="img/portratt.jpg" alt="" /></li>
-          </ul>
-        </div>
-      </section>
-      <section>
-        <section>
-          <img src="img/portratt.jpg" alt="Portrait of Regina" />
-          <h2>Om mig</h2>
-          <p>
-            Leg. Fysioterapeut, MSc inom idrottsvetenskap Jag inriktar mig på
-            rehabilitering av motions- och idrottsskador samt muskuloskeletala
-            besvär. Intresse och vidareutbildning inom graviditetsrelaterade
-            besvär både under graviditet och postpartum. Hjälper gärna kvinnor
-            att bibehålla träning under graviditet eller stegra tillbaka träning
-            efter förlossning. Utför ej vaginal undersökning. Har en
-            masterexamen inom idrottsvetenskap. Bakgrund som badmintonspelare på
-            elitnivå. Tränar idag främst styrketräning, CrossFit och löpning.
-          </p>
+    <div class="wrapper">
+      <header>
+        <img class="logo" src="img/logo.png" alt="" />
+        <nav class="nav">
+          <a href="">Om mig</a><a href="">Sport rehab</a
+          ><a href="">Kvinnohälsa</a><a href="">Kontakt</a>
+        </nav>
+      </header>
+      <main>
+        <section class="splide" aria-label="Splide Basic HTML Example">
+          <div class="splide__track">
+            <ul class="splide__list">
+              <li class="splide__slide">
+                <img src="img/portratt.jpg" alt="" />
+              </li>
+              <li class="splide__slide">
+                <img src="img/kvinnohälsa.jpg" alt="" />
+              </li>
+              <li class="splide__slide">
+                <img src="img/portratt.jpg" alt="" />
+              </li>
+              <li class="splide__slide">
+                <img src="img/kvinnohälsa.jpg" alt="" />
+              </li>
+              <li class="splide__slide">
+                <img src="img/portratt.jpg" alt="" />
+              </li>
+            </ul>
+          </div>
         </section>
-        <section>
-          <img src="img/kvinnohälsa.jpg" alt="" />
-          <h2>Sport Rehab</h2>
-          <p>
-            Jag hjälper dig att bygga upp din muskulatur efter skada så att du
-            på sikt säkert kan återgå till att idrotta som du gjort tidiare.
-          </p>
-          <button>BOKA</button>
+        <section class="info">
+          <section class="om-mig">
+            <img src="img/portratt.jpg" alt="Portrait of Regina" />
+            <h2>Om mig</h2>
+            <p>
+              Leg. Fysioterapeut, MSc inom idrottsvetenskap Jag inriktar mig på
+              rehabilitering av motions- och idrottsskador samt muskuloskeletala
+              besvär. Intresse och vidareutbildning inom graviditetsrelaterade
+              besvär både under graviditet och postpartum. Hjälper gärna kvinnor
+              att bibehålla träning under graviditet eller stegra tillbaka
+              träning efter förlossning. Utför ej vaginal undersökning. Har en
+              masterexamen inom idrottsvetenskap. Bakgrund som badmintonspelare
+              på elitnivå. Tränar idag främst styrketräning, CrossFit och
+              löpning.
+            </p>
+          </section>
+          <section class="sport-rehab">
+            <img src="img/portratt.jpg" alt="" />
+            <h2>Sport Rehab</h2>
+            <p>
+              Jag hjälper dig att bygga upp din muskulatur efter skada så att du
+              på sikt säkert kan återgå till att idrotta som du gjort tidiare.
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id,
+              aliquid veniam dolore magni autem quas facere placeat laudantium
+              similique assumenda laboriosam nemo praesentium non architecto
+              sequi cum fugit amet excepturi? Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Earum tempore dolorem voluptas
+              impedit? Veritatis impedit nam assumenda beatae eum debitis natus
+              minus vitae. Rem vitae ratione voluptas sapiente quae illum.
+            </p>
+            <button>BOKA</button>
+          </section>
+          <section class="kvinnor">
+            <img src="img/portratt.jpg" alt="pregnant-woman" />
+            <h2>Kvinnohälsa</h2>
+            <p>
+              Vill du ha stöd med din träning under och efter din graviditet.
+              Att säkert arbeta utan att belasta din kropp för mycket och låta
+              din bäckenbotten få det stöd den behöver. Lorem ipsum dolor sit
+              amet consectetur adipisicing elit. Vitae mollitia, eaque
+              praesentium atque temporibus pariatur cumque eligendi quasi,
+              reiciendis nulla illum eum laborum ad odit asperiores sint
+              voluptatem debitis officia! Lorem ipsum, dolor sit amet
+              consectetur adipisicing elit. Alias dolorem laborum accusamus
+              quasi facilis perferendis quibusdam ut, voluptate nihil. Quod
+              accusamus voluptatem blanditiis ea laudantium. Nesciunt dolore
+              vero accusantium at.
+            </p>
+            <button>BOKA</button>
+          </section>
         </section>
-        <section>
-          <img src="img/kvinnohälsa.jpg" alt="pregnant-woman" />
-          <h2>Kvinnohälsa</h2>
-          <p>
-            Vill du ha stöd med din träning under och efter din graviditet. Att
-            säkert arbeta utan att belasta din kropp för mycket och låta din
-            bäckenbotten få det stöd den behöver.
-          </p>
-          <button>BOKA</button>
-        </section>
-      </section>
-    </main>
+      </main>
 
-    <script>
-      new Splide(".splide").mount();
-    </script>
-    <footer>
-      <h2>Kontakt</h2>
-      <p>Hamnstigen 11 8328 9 ‘ Hamnen 0863-0374950</p>
-    </footer>
+      <script>
+        new Splide(".splide").mount();
+      </script>
+    </div>
   </body>
+  <footer>
+    <h2>Kontakt</h2>
+    <p>Hamnstigen 11 8328 9 ‘ Hamnen 0863-0374950</p>
+  </footer>
 </html>
