--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
 
-    <title>Regina Rehab</title>
+    <title>Regina Fysio</title>
     <script src="
 https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js
 "></script>
@@ -28,11 +28,63 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js
       <header>
         <img class="logo" src="img/logo.png" alt="" />
         <nav class="nav">
-          <a href="">Om mig</a><a href="">Sport rehab</a
+          <a href="">Om mig</a><a href="">Sportrehab</a
           ><a href="">Kvinnohälsa</a><a href="">Kontakt</a>
         </nav>
       </header>
       <main>
+        <section class="info">
+          <section class="rehab">
+            <img src="img/portratt.jpg" alt="Portrait of Regina" />
+            <section class="rehab-info">
+              <h2>Om mig</h2>
+              <p>
+                Leg. Fysioterapeut, MSc inom idrottsvetenskap Jag inriktar mig
+                på rehabilitering av motions- och idrottsskador samt
+                muskuloskeletala besvär. Intresse och vidareutbildning inom
+                graviditetsrelaterade besvär både under graviditet och
+                postpartum. Hjälper gärna kvinnor att bibehålla träning under
+                graviditet eller stegra tillbaka träning efter förlossning.
+                Utför ej vaginal undersökning. Har en masterexamen inom
+                idrottsvetenskap. Bakgrund som badmintonspelare på elitnivå.
+                Tränar idag främst styrketräning, CrossFit och löpning.
+              </p>
+            </section>
+          </section>
+          <section class="rehab">
+            <img src="img/arm-workout.jpg" alt="" />
+            <section class="rehab-info">
+              <h2>Sport Rehab</h2>
+              <p>
+                Jag erbjuder dig en modern rehabilitering baserad på den senaste
+                forskningen och många års erfarenhet. Jag strävar efter att
+                hjälpa allt från elitidrottare till motionärer till ett aktivt
+                och friskt liv. Efter noggrann undersökning vi tillsammans upp
+                ett rehabprogram som är anpassat för dig, din skada och din
+                målsättning. Det spelar ingen roll om du har en smärtfri vardag
+                eller prestation på elitnivå som mål, alla är välkomna.
+              </p>
+              <button class="button">BOKA</button>
+            </section>
+          </section>
+          <section class="rehab">
+            <img src="img/pregnant.jpg" alt="pregnant-woman" />
+            <section class="rehab-info">
+              <h2>Kvinnohälsa</h2>
+              <p>
+                Jag erbjuder dig som vill ha stöd med din träning både under och
+                efter din graviditet. Uppföljningunder graviditet med fokus på
+                belastning och aktivitet. Att säkert arbeta och fortsätta träna
+                utan att belasta din kropp för mycket och låta din bäckenbotten
+                få det stöd den behöver. Efter en förlossning så hjälper jag dig
+                att hitta övningar som bygger upp din muskulatur igen utan att
+                överbelasta. Uppföljning specifikt av bäckenbotten efter
+                graviditet vid besvär.
+              </p>
+              <button class="button">BOKA</button>
+            </section>
+          </section>
+        </section>
         <section class="splide" aria-label="Splide Basic HTML Example">
           <div class="splide__track">
             <ul class="splide__list">
@@ -60,7 +112,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js
                 <div class="splide__slide__container">
                   <img
                     class="my-very-nice-splide-img"
-                    src="img/pregnant.jpeg"
+                    src="img/pregnant.jpg"
                     alt=""
                   />
                 </div>
@@ -69,69 +121,13 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js
                 <div class="splide__slide__container">
                   <img
                     class="my-very-nice-splide-img"
-                    src="img/pregnant.jpeg"
+                    src="img/pregnant.jpg"
                     alt=""
                   />
                 </div>
               </li>
             </ul>
           </div>
-        </section>
-        <section class="info">
-          <section class="om-mig">
-            <img src="img/portratt.jpg" alt="Portrait of Regina" />
-            <h2>Om mig</h2>
-            <p>
-              Leg. Fysioterapeut, MSc inom idrottsvetenskap Jag inriktar mig på
-              rehabilitering av motions- och idrottsskador samt muskuloskeletala
-              besvär. Intresse och vidareutbildning inom graviditetsrelaterade
-              besvär både under graviditet och postpartum. Hjälper gärna kvinnor
-              att bibehålla träning under graviditet eller stegra tillbaka
-              träning efter förlossning. Utför ej vaginal undersökning. Har en
-              masterexamen inom idrottsvetenskap. Bakgrund som badmintonspelare
-              på elitnivå. Tränar idag främst styrketräning, CrossFit och
-              löpning.
-            </p>
-          </section>
-          <section class="sport-rehab" class="rehab">
-            <img src="img/portratt.jpg" alt="" />
-            <section class="rehab-info">
-              <h2>Sport Rehab</h2>
-              <p>
-                Jag hjälper dig att bygga upp din muskulatur efter skada så att
-                du på sikt säkert kan återgå till att idrotta som du gjort
-                tidiare. Lorem ipsum dolor sit amet, consectetur adipisicing
-                elit. Id, aliquid veniam dolore magni autem quas facere placeat
-                laudantium similique assumenda laboriosam nemo praesentium non
-                architecto sequi cum fugit amet excepturi? Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Earum tempore dolorem
-                voluptas impedit? Veritatis impedit nam assumenda beatae eum
-                debitis natus minus vitae. Rem vitae ratione voluptas sapiente
-                quae illum.
-              </p>
-              <button class="button">BOKA</button>
-            </section>
-          </section>
-          <section class="kvinnor" class="rehab">
-            <img src="img/portratt.jpg" alt="pregnant-woman" />
-            <section class="rehab-info">
-              <h2>Kvinnohälsa</h2>
-              <p>
-                Vill du ha stöd med din träning under och efter din graviditet.
-                Att säkert arbeta utan att belasta din kropp för mycket och låta
-                din bäckenbotten få det stöd den behöver. Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Vitae mollitia, eaque
-                praesentium atque temporibus pariatur cumque eligendi quasi,
-                reiciendis nulla illum eum laborum ad odit asperiores sint
-                voluptatem debitis officia! Lorem ipsum, dolor sit amet
-                consectetur adipisicing elit. Alias dolorem laborum accusamus
-                quasi facilis perferendis quibusdam ut, voluptate nihil. Quod
-                accusamus voluptatem blanditiis ea laudantium. Nesciunt dolore
-                vero accusantium at.
-              </p>
-              <button class="button">BOKA</button>
-            </section>
-          </section>
         </section>
       </main>
 
