--- a/index.html
+++ b/index.html
@@ -28,63 +28,11 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js
       <header>
         <img class="logo" src="img/logo.png" alt="" />
         <nav class="nav">
-          <a href="">Om mig</a><a href="">Sportrehab</a
-          ><a href="">Kvinnohälsa</a><a href="">Kontakt</a>
+          <a href="#om-mig">Om mig</a><a href="#sport-rehab">Sportrehab</a
+          ><a href="#kvinnor">Kvinnohälsa</a><a href="#contact-me">Kontakt</a>
         </nav>
       </header>
       <main>
-        <section class="info">
-          <section class="rehab">
-            <img src="img/portratt.jpg" alt="Portrait of Regina" />
-            <section class="rehab-info">
-              <h2>Om mig</h2>
-              <p>
-                Leg. Fysioterapeut, MSc inom idrottsvetenskap Jag inriktar mig
-                på rehabilitering av motions- och idrottsskador samt
-                muskuloskeletala besvär. Intresse och vidareutbildning inom
-                graviditetsrelaterade besvär både under graviditet och
-                postpartum. Hjälper gärna kvinnor att bibehålla träning under
-                graviditet eller stegra tillbaka träning efter förlossning.
-                Utför ej vaginal undersökning. Har en masterexamen inom
-                idrottsvetenskap. Bakgrund som badmintonspelare på elitnivå.
-                Tränar idag främst styrketräning, CrossFit och löpning.
-              </p>
-            </section>
-          </section>
-          <section class="rehab">
-            <img src="img/arm-workout.jpg" alt="" />
-            <section class="rehab-info">
-              <h2>Sport Rehab</h2>
-              <p>
-                Jag erbjuder dig en modern rehabilitering baserad på den senaste
-                forskningen och många års erfarenhet. Jag strävar efter att
-                hjälpa allt från elitidrottare till motionärer till ett aktivt
-                och friskt liv. Efter noggrann undersökning vi tillsammans upp
-                ett rehabprogram som är anpassat för dig, din skada och din
-                målsättning. Det spelar ingen roll om du har en smärtfri vardag
-                eller prestation på elitnivå som mål, alla är välkomna.
-              </p>
-              <button class="button">BOKA</button>
-            </section>
-          </section>
-          <section class="rehab">
-            <img src="img/pregnant.jpg" alt="pregnant-woman" />
-            <section class="rehab-info">
-              <h2>Kvinnohälsa</h2>
-              <p>
-                Jag erbjuder dig som vill ha stöd med din träning både under och
-                efter din graviditet. Uppföljningunder graviditet med fokus på
-                belastning och aktivitet. Att säkert arbeta och fortsätta träna
-                utan att belasta din kropp för mycket och låta din bäckenbotten
-                få det stöd den behöver. Efter en förlossning så hjälper jag dig
-                att hitta övningar som bygger upp din muskulatur igen utan att
-                överbelasta. Uppföljning specifikt av bäckenbotten efter
-                graviditet vid besvär.
-              </p>
-              <button class="button">BOKA</button>
-            </section>
-          </section>
-        </section>
         <section class="splide" aria-label="Splide Basic HTML Example">
           <div class="splide__track">
             <ul class="splide__list">
@@ -129,6 +77,58 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js
             </ul>
           </div>
         </section>
+        <section class="info">
+          <section class="rehab" id="om-mig">
+            <img src="img/portratt.jpg" alt="Portrait of Regina" />
+            <section class="rehab-info">
+              <h2>Om mig</h2>
+              <p>
+                Leg. Fysioterapeut, MSc inom idrottsvetenskap Jag inriktar mig
+                på rehabilitering av motions- och idrottsskador samt
+                muskuloskeletala besvär. Intresse och vidareutbildning inom
+                graviditetsrelaterade besvär både under graviditet och
+                postpartum. Hjälper gärna kvinnor att bibehålla träning under
+                graviditet eller stegra tillbaka träning efter förlossning.
+                Utför ej vaginal undersökning. Har en masterexamen inom
+                idrottsvetenskap. Bakgrund som badmintonspelare på elitnivå.
+                Tränar idag främst styrketräning, CrossFit och löpning.
+              </p>
+            </section>
+          </section>
+          <section class="rehab" id="sport-rehab">
+            <img src="img/arm-workout.jpg" alt="" />
+            <section class="rehab-info">
+              <h2>Sport Rehab</h2>
+              <p>
+                Jag erbjuder dig en modern rehabilitering baserad på den senaste
+                forskningen och många års erfarenhet. Jag strävar efter att
+                hjälpa allt från elitidrottare till motionärer till ett aktivt
+                och friskt liv. Efter noggrann undersökning vi tillsammans upp
+                ett rehabprogram som är anpassat för dig, din skada och din
+                målsättning. Det spelar ingen roll om du har en smärtfri vardag
+                eller prestation på elitnivå som mål, alla är välkomna.
+              </p>
+              <button class="button"><a href="#">BOKA</a></button>
+            </section>
+          </section>
+          <section class="rehab" id="kvinnor">
+            <img src="img/pregnant.jpg" alt="pregnant-woman" />
+            <section class="rehab-info">
+              <h2>Kvinnohälsa</h2>
+              <p>
+                Jag erbjuder dig som vill ha stöd med din träning både under och
+                efter din graviditet. Uppföljningunder graviditet med fokus på
+                belastning och aktivitet. Att säkert arbeta och fortsätta träna
+                utan att belasta din kropp för mycket och låta din bäckenbotten
+                få det stöd den behöver. Efter en förlossning så hjälper jag dig
+                att hitta övningar som bygger upp din muskulatur igen utan att
+                överbelasta. Uppföljning specifikt av bäckenbotten efter
+                graviditet vid besvär.
+              </p>
+              <button class="button"><a href="#">BOKA</a></button>
+            </section>
+          </section>
+        </section>
       </main>
 
       <script>
@@ -140,7 +140,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js
       </script>
     </div>
     <footer>
-      <section class="contact"><h2>Kontakt</h2></section>
+      <section class="contact" id="contact-me"><h2>Kontakt</h2></section>
       <section class="contact-info">
         <section class="adress">
           <h3>Adress</h3>
