--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js
                     alt=""
                   />
                 </div>
-                Hej hopp allt är bra
               </li>
               <li class="splide__slide">
                 <div class="splide__slide__container">
@@ -54,22 +53,30 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js
                     alt=""
                   />
                 </div>
-                Hej hopp allt är bra
               </li>
               <li class="splide__slide">
                 <div class="splide__slide__container">
                   <img
                     class="my-very-nice-splide-img"
-                    src="img/pregnant.jpg"
+                    src="img/kvinnohälsa.jpg"
                     alt=""
                   />
                 </div>
               </li>
-              <li>
+              <li class="splide__slide">
                 <div class="splide__slide__container">
                   <img
                     class="my-very-nice-splide-img"
-                    src="img/pregnant.jpg"
+                    src="img/arm-rehab.jpg"
+                    alt=""
+                  />
+                </div>
+              </li>
+              <li class="splide__slide">
+                <div class="splide__slide__container">
+                  <img
+                    class="my-very-nice-splide-img"
+                    src="img/wrist.jpg"
                     alt=""
                   />
                 </div>
@@ -134,8 +141,10 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js
       <script>
         new Splide(".splide", {
           rewind: (Boolean = true),
-          // width: "200px",
-          // autoWidth: true,
+          Width: "800px",
+          heightRatio: 0.45,
+          padding: 10,
+          gap: 20,
         }).mount();
       </script>
     </div>
