--- a/index.html
+++ b/index.html
@@ -141,29 +141,29 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js
       <script>
         new Splide(".splide", {
           rewind: (Boolean = true),
-          Width: "800px",
+          //Width: "500px",
           heightRatio: 0.45,
           padding: 10,
           gap: 20,
         }).mount();
       </script>
+      <footer>
+        <section class="contact" id="contact-me"><h2>Kontakt</h2></section>
+        <section class="contact-info">
+          <section class="adress">
+            <h3>Adress</h3>
+            <ul>
+              <li>Hamnstigen 11 8328 9 ‘ Hamnen</li>
+            </ul>
+          </section>
+          <section class="telefon">
+            <h3>Telefon</h3>
+            <ul>
+              <li>0863-0374950</li>
+            </ul>
+          </section>
+        </section>
+      </footer>
     </div>
-    <footer>
-      <section class="contact" id="contact-me"><h2>Kontakt</h2></section>
-      <section class="contact-info">
-        <section class="adress">
-          <h3>Adress</h3>
-          <ul>
-            <li>Hamnstigen 11 8328 9 ‘ Hamnen</li>
-          </ul>
-        </section>
-        <section class="telefon">
-          <h3>Telefon</h3>
-          <ul>
-            <li>0863-0374950</li>
-          </ul>
-        </section>
-      </section>
-    </footer>
   </body>
 </html>
