--- a/index.html
+++ b/index.html
@@ -26,58 +26,62 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js
   <body>
     <div class="wrapper">
       <header>
-        <img class="logo" src="img/logo.png" alt="" />
+        <img class="logo" src="img/logo.png" alt="regina Fysio logo" />
         <nav class="nav">
           <a href="#om-mig">Om mig</a><a href="#sport-rehab">Sportrehab</a
           ><a href="#kvinnor">Kvinnohälsa</a><a href="#contact-me">Kontakt</a>
         </nav>
       </header>
       <main>
-        <section class="splide" aria-label="Splide Basic HTML Example">
+        <section
+          style="display: none"
+          class="splide"
+          aria-label="Splide Basic HTML Example"
+        >
           <div class="splide__track">
             <ul class="splide__list">
               <li class="splide__slide">
                 <div class="splide__slide__container">
                   <img
-                    class="my-very-nice-splide-img"
+                    class="splide-img"
                     src="img/yoga.jpeg"
-                    alt=""
+                    alt="two women on yoga mats"
                   />
                 </div>
               </li>
               <li class="splide__slide">
                 <div class="splide__slide__container">
                   <img
-                    class="my-very-nice-splide-img"
+                    class="splide-img"
                     src="img/wrist-rehab.jpeg"
-                    alt=""
+                    alt="wrist-rehab with band"
                   />
                 </div>
               </li>
               <li class="splide__slide">
                 <div class="splide__slide__container">
                   <img
-                    class="my-very-nice-splide-img"
-                    src="img/kvinnohälsa.jpg"
-                    alt=""
+                    class="splide-img"
+                    src="img/kvinnohalsa.jpg"
+                    alt="pregnant woman"
                   />
                 </div>
               </li>
               <li class="splide__slide">
                 <div class="splide__slide__container">
                   <img
-                    class="my-very-nice-splide-img"
+                    class="splide-img"
                     src="img/arm-rehab.jpg"
-                    alt=""
+                    alt="traning with weights"
                   />
                 </div>
               </li>
               <li class="splide__slide">
                 <div class="splide__slide__container">
                   <img
-                    class="my-very-nice-splide-img"
+                    class="splide-img"
                     src="img/wrist.jpg"
-                    alt=""
+                    alt="wrist training"
                   />
                 </div>
               </li>
@@ -103,7 +107,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js
             </section>
           </section>
           <section class="rehab" id="sport-rehab">
-            <img src="img/arm-workout.jpg" alt="" />
+            <img src="img/arm-workout.jpg" alt="women training her biceps" />
             <section class="rehab-info">
               <h2>Sport Rehab</h2>
               <p>
