--- a/index.html
+++ b/index.html
@@ -33,11 +33,7 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js
         </nav>
       </header>
       <main>
-        <section
-          style="display: none"
-          class="splide"
-          aria-label="Splide Basic HTML Example"
-        >
+        <section class="splide" aria-label="Splide Basic HTML Example">
           <div class="splide__track">
             <ul class="splide__list">
               <li class="splide__slide">
